# polychat-ipc

./: Cargo.toml
.github/workflows/: ci.yaml
src/: api.rs  core_instruction_handler.rs  lib.rs  plugin_instruction_handler.rs
src/api/: core_instruction_handler.rs  mod.rs  plugin_instruction_handler.rs
src/api/schema/: auth.rs  instructions.rs  keepalive.rs  mod.rs  protocol.rs
src/client_sdk/: mod.rs  socket.rs
src/core/: README.md  mod.rs  socket_handler.rs
src/core/ui_interface/: load_status.rs  mod.rs  ui_trait.rs
src/plugin_management/: error.rs  ipc_server.rs  mod.rs  plugin_manager.rs  process.rs
src/polychat_plugin_sdk_rust/: README.md  client.rs  entrypoint.rs  mod.rs  socket.rs
src/process_management/: error.rs  ipc_server.rs  mod.rs  process.rs  process_manager.rs
src/utils/: socket.rs
tests/: process_socket.rs  process_socket_int_test.rs  socket_int_test.rs  test_plugin_tests.rs
