[package]
name = "polychat-ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features=["derive"] }
serde_json = { version = "1.0.91", features=["raw_value"] }
env_logger = "0.10.0"
log = "0.4.17"
test-log = "0.2.11"
walkdir = "2.3.2"
