[package]
name = "polychat-ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features=["derive"] }
serde_json = { version = "1.0.91", features=["raw_value"] }
log = "0.4.17"
walkdir = "2.3.2"
tokio = { version = "1.25.0", features=["net", "time", "io-util", "rt", "macros", "rt-multi-thread", "sync"]}
interprocess = {version="1.2.1", features=["tokio_support"]}
futures = "0.3.25"
tokio-test = "0.4.2"
anyhow = "1.0.69"
thiserror = "1.0.38"

[dev-dependencies]
test-log = "0.2.11"
env_logger = "0.10.0"
rstest = "0.16.0"
